Fixed Size for Overflowing Books

--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
         <h1>Enter Book Details</h1>
         <div class="input">
             <div class="input-title user-input">
-                <label for="book-title"><h3>Title : </h3></label><input type="text" name="book-title" id="book-title">
+                <label for="book-title">
+                    <h3>Title : </h3>
+                </label><input type="text" name="book-title" id="book-title">
             </div>
             <div class="input-author user-input">
-                <label for="book-author"><h3>Author : </h3></label><input type="text" name="book-author" id="book-author">
+                <label for="book-author">
+                    <h3>Author : </h3>
+                </label><input type="text" name="book-author" id="book-author">
             </div>
             <div class="input-pages user-input">
-                <label for="book-pages"><h3>Pages : </h3></label><input type="number" name="book-pages" id="book-pages">
+                <label for="book-pages">
+                    <h3>Pages : </h3>
+                </label><input type="number" name="book-pages" id="book-pages">
             </div>
             <div class="input-read user-input">
                 <h3>Read : </h3>
@@ -54,24 +60,52 @@
         </div>
         <div id="right">
             <!-- <div class="book">
-                <h2 class="title">Title</h2>
+                <h2 class="title">Book-Title-1</h2>
                 <div class="author">
                     <div>Author : </div>
-                    <div class="author-display">Good Author</div>
+                    <div>Book-Author-1</div>
                 </div>
                 <div class="pages">
-                    <div>Page : </div>
-                    <div class="page-display">59</div>
+                    <div>Pages : </div>
+                    <div>111</div>
                 </div>
                 <div class="read">
-                    <div>Read : </div>
-                    <div class="read-display">False</div>
+                    <div>Have Read : </div>
+                    <div>False</div>
                 </div>
-
-                <div class="bookControl">
-                    <button id="remove">Remove</button>
-                    <button id="read">Read</button>
+                <div class="bookControl"><button id="remove">Remove</button><button id="read">Read</button></div>
+            </div>
+            <div class="book">
+                <h2 class="title">Book-Title-2</h2>
+                <div class="author">
+                    <div>Author : </div>
+                    <div>Book-Author-2</div>
                 </div>
+                <div class="pages">
+                    <div>Pages : </div>
+                    <div>222</div>
+                </div>
+                <div class="read">
+                    <div>Have Read : </div>
+                    <div>True</div>
+                </div>
+                <div class="bookControl"><button id="remove">Remove</button><button id="read">Unread</button></div>
+            </div>
+            <div class="book">
+                <h2 class="title">Book-Title-3</h2>
+                <div class="author">
+                    <div>Author : </div>
+                    <div>Book-Author-3</div>
+                </div>
+                <div class="pages">
+                    <div>Pages : </div>
+                    <div>333</div>
+                </div>
+                <div class="read">
+                    <div>Have Read : </div>
+                    <div>False</div>
+                </div>
+                <div class="bookControl"><button id="remove">Remove</button><button id="read">Read</button></div>
             </div> -->
         </div>
     </div>
