Added Demonstration Books to the Library

--- a/index.html
+++ b/index.html
@@ -59,15 +59,23 @@
             </h1>
         </div>
         <div id="right">
-            <!-- <div class="book">
-                <h2 class="title">Book-Title-1</h2>
+            <div class="book">
+                <div class="title">
+                    <div class="title-display-container">
+                        <h2 class="title-display">Book-Title-1</h2>
+                    </div>
+                </div>
                 <div class="author">
                     <div>Author : </div>
-                    <div>Book-Author-1</div>
+                    <div class="author-display-container">
+                        <div class="author-display">Book-Author-1</div>
+                    </div>
                 </div>
                 <div class="pages">
                     <div>Pages : </div>
-                    <div>111</div>
+                    <div class="pages-display-container">
+                        <div class="pages-display">111</div>
+                    </div>
                 </div>
                 <div class="read">
                     <div>Have Read : </div>
@@ -76,14 +84,23 @@
                 <div class="bookControl"><button id="remove">Remove</button><button id="read">Read</button></div>
             </div>
             <div class="book">
-                <h2 class="title">Book-Title-2</h2>
+                <div class="title">
+                    <div class="title-display-container">
+                        <h2 class="title-display scroll" style="--scroll-duration: 4.2s; --scroll-distance: -21px;">
+                            Very-Long-Book-Title-2</h2>
+                    </div>
+                </div>
                 <div class="author">
                     <div>Author : </div>
-                    <div>Book-Author-2</div>
+                    <div class="author-display-container">
+                        <div class="author-display">Book-Author-2</div>
+                    </div>
                 </div>
                 <div class="pages">
                     <div>Pages : </div>
-                    <div>222</div>
+                    <div class="pages-display-container">
+                        <div class="pages-display">222</div>
+                    </div>
                 </div>
                 <div class="read">
                     <div>Have Read : </div>
@@ -92,21 +109,29 @@
                 <div class="bookControl"><button id="remove">Remove</button><button id="read">Unread</button></div>
             </div>
             <div class="book">
-                <h2 class="title">Book-Title-3</h2>
+                <div class="title">
+                    <div class="title-display-container">
+                        <h2 class="title-display">Book-Title-3</h2>
+                    </div>
+                </div>
                 <div class="author">
                     <div>Author : </div>
-                    <div>Book-Author-3</div>
+                    <div class="author-display-container">
+                        <div class="author-display">Book-Author-3</div>
+                    </div>
                 </div>
                 <div class="pages">
                     <div>Pages : </div>
-                    <div>333</div>
+                    <div class="pages-display-container">
+                        <div class="pages-display">333</div>
+                    </div>
                 </div>
                 <div class="read">
                     <div>Have Read : </div>
                     <div>False</div>
                 </div>
                 <div class="bookControl"><button id="remove">Remove</button><button id="read">Read</button></div>
-            </div> -->
+            </div>
         </div>
     </div>
     <script src="./script/script.js"></script>
